--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div>
+  <h1>Books</h1>
+  <% @books.each do |book| %>
+    <p>User info：<%= image_tag 'sample-author1.jpg' %></p>
+    <p>Title: <%= book.title %></p>
+    <p>Opinion: <%= book.body %></p>
+  <% end %>
+</div>
