--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,29 @@
-<div>
-  <h1>Books</h1>
-  <% @books.each do |book| %>
-    <p>User info：<%= image_tag 'sample-author1.jpg' %></p>
-    <p>Title: <%= book.title %></p>
-    <p>Opinion: <%= book.body %></p>
-  <% end %>
-</div>
+<body>
+
+ <h1>New book</h1>
+   <%= form_with model: @book do |f| %>
+    <div class="field">
+      <div><%= f.label :title %></div>
+      <div><%= f.text_field :title %></div>
+    </div>
+
+    <div class="field">
+      <div><%= f.label :body %></div>
+      <div><%= f.text_area :body %></div>
+    </div>
+
+    <div class="action">
+    <%= f.submit 'Create Book' %>
+    </div>
+   <% end %>
+
+ <% @books.each do |book| %>
+  <div>
+   <%= image_tag book.get_image %>
+   <h1>Books</h1>
+     <%= book.title %>
+     <%= book.body %>
+  </div>
+ <% end %>
+
+</body>
