--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,18 @@
 <div>
   <%= image_tag @book.get_image %>
-  <p>User info：<%= image_tag 'sample-author1.jpg' %></p>
-  <p>name：<%= @book.user.name %></p>
-  <p>introduction：<%= @book.caption %></p>
+
+  <P>
+  <strong>Title:</stong>
+  <p><%= @book.title %></p>
+  </p>
+
+  <P>
+  <strong>Body:</strong>
+  <p><%= @book.body %></p>
+  </p>
+
+  <% if @book.user == current_user %>
+  　<%= link_to "Edit", edit_book_path %>
+    <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"} %>
+  <% end %>
 </div>
