--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<!-- ユーザーの詳細 -->
+<div>
+  <div>
+    <h4>image</h4>
+    <%= image_tag @user.get_profile_image(100,100) %>
+  </div>
+  <div>
+    <h4>name</h4>
+    <%= @user.name %>
+  </div>
+</div>
+
+<p><%= link_to "Show", user_path(@user) %></p>
