--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,24 @@
     <header>
     <% if user_signed_in? %>
       <li>
+        <%= link_to "Home", users_path %>
+      </li>
+      <li>
+        <%= link_to "Users", users_path %>
+      </li>
+      <li>
+        <%= link_to "Books", books_path %>
+      </li>
+      <li>
         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
+      <li>
+        <%= link_to "Home", root_path %>
+      </li>
+      <li>
+        <%= link_to "About", homes_about_path %>
+      </li>
       <li>
         <%= link_to "Sign up", new_user_registration_path %>
       </li>
