--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,50 @@
-<% @books.each do |book| %>
+<body>
+
+ <h1>User info</h1>
+  <%= image_tag @user.get_profile_image(100,100) %>
+   <div>
+   <h4>name</h4>
+   <%= @user.name %>
+   </div>
+   <div>
+   <h4>introduction</h4>
+   <%= @user.introduction %>
+   </div>
+
+  <% if @user == current_user %>
+  <%= link_to "プロフィール編集", edit_user_path(@user) %>
+  <% end %>
+
+  <h1>New book</h1>
+   <%= form_with model: @book do |f| %>
+    <div class="field">
+      <div><%= f.label :title %></div>
+      <div><%= f.text_field :title %></div>
+    </div>
+
+    <div class="field">
+      <div><%= f.label :body %></div>
+      <div><%= f.text_area :body %></div>
+    </div>
+
+    <div class="action">
+    <%= f.submit 'Create Book' %>
+    </div>
+   <% end %>
+
+  <h1>Books</h1>
+  <% @books.each do |book| %>
   <div>
-   <h1>Books</h1>
-   <%= image_tag book.get_image %>
-   <div>
-     <h4>Title</h4>
-     <%= book.title %></p>
-   </div>
-   <div>
-     <h4>Opinion</h4>
-     <%= book.body %>
-   </div>
+    <%= image_tag book.get_image %>
+    <div>
+      <h4>Title</h4>
+      <%= book.title %></p>
+    </div>
+    <div>
+      <h4>Opinion</h4>
+      <%= book.body %>
+    </div>
   </div>
- <% end %>
+  <% end %>
+
+</body>
