--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,7 @@
-<h1>Topページ</h1>
+<h1>welcome to Bookers !!</h1>
+  <div>
+    <%= link_to "Sign up", new_user_registration_path %>
+  </div>
+  <div>
+    <%= link_to "Log in", new_user_session_path %>
+  </div>
