--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,18 +1,50 @@
-<div>
-  <%= image_tag @book.get_image %>
+<body>
 
-  <P>
-  <strong>Title:</stong>
-  <p><%= @book.title %></p>
-  </p>
+ <h1>User info</h1>
+  <%= image_tag @user.get_profile_image(100,100) %>
+   <div>
+   <h4>name</h4>
+   <%= @user.name %>
+   </div>
+   <div>
+   <h4>introduction</h4>
+   <%= @user.introduction %>
+   </div>
 
-  <P>
-  <strong>Body:</strong>
-  <p><%= @book.body %></p>
-  </p>
-
-  <% if @book.user == current_user %>
-  　<%= link_to "Edit", edit_book_path %>
-    <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"} %>
+  <% if @user == current_user %>
+  <%= link_to "プロフィール編集", edit_user_path(@user) %>
   <% end %>
-</div>
+
+ <h1>New book</h1>
+   <%= form_with model: @book do |f| %>
+    <div class="field">
+      <div><%= f.label :title %></div>
+      <div><%= f.text_field :title %></div>
+    </div>
+
+    <div class="field">
+      <div><%= f.label :body %></div>
+      <div><%= f.text_area :body %></div>
+    </div>
+
+    <div class="action">
+    <%= f.submit 'Create Book' %>
+    </div>
+   <% end %>
+
+ <div>
+   <h1>Book detail</h1>
+
+   <%= image_tag @book.get_image %>
+
+   <p><%= @book.title %></p>
+
+   p><%= @book.body %></p>
+
+   <% if @book.user == current_user %>
+  　 <%= link_to "Edit", edit_book_path %>
+     <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"} %>
+   <% end %>
+ </div>
+
+</body>
