--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,15 +33,17 @@
    <% end %>
 
   <h1>Books</h1>
+  <h4>Title</h4>
+  <h4>Opinion</h4>
   <% @books.each do |book| %>
   <div>
     <%= image_tag book.get_image %>
     <div>
-      <h4>Title</h4>
+      <!--<h4>Title</h4>-->
       <%= book.title %></p>
     </div>
     <div>
-      <h4>Opinion</h4>
+      <!--<h4>Opinion</h4>-->
       <%= book.body %>
     </div>
   </div>
