[3-25]サクセスメッセージ追加

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_with model: @user do |form| %>
   <div>
-    <h4>name</h4>
+    <h4>Name</h4>
     <%= form.text_field :name %>
   </div>
 
