--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -39,11 +39,11 @@
 
    <p><%= @book.title %></p>
 
-   p><%= @book.body %></p>
+   <p><%= @book.body %></p>
 
    <% if @book.user == current_user %>
   　 <%= link_to "Edit", edit_book_path %>
-     <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"} %>
+    <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"} %>
    <% end %>
  </div>
 
