[3-25]books/show　記載変更

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,7 +16,7 @@
   <% end %>
 
  <h1>New book</h1>
-   <%= form_with model: @book do |f| %>
+   <%= form_with model: @book_new do |f| %>
     <div class="field">
       <div><%= f.label :title %></div>
       <div><%= f.text_field :title %></div>
