--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,16 @@
 <body>
 
+  <% if @user.errors.any? %>
+  <div class = "alert">
+    <h2><%= @user.errors.count %> error prohibited this book from being saved:　</h2>
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+　<% end %>
+
  <h1>User info</h1>
   <%= image_tag @user.get_profile_image(100,100) %>
    <div>
