--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,16 @@
+<body>
+
+  <% if @book.errors.any? %>
+　<div id="error_explanation">
+　  <h2><%= @book.errors.count %> error prohibited this book from being saved:　</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+  <% end %>
+
 <h1>Editing Book</h1>
 
 <%= form_with model: @book do |f| %>
@@ -25,3 +38,5 @@
 
 <%= link_to "Show", book_path(@book) %>
 <%= link_to "Back", books_path %>
+
+</body>
