[3-25] 部分テンプレート化

--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,5 +1,6 @@
 <% if model.errors.any? %>
   <div class="alert alert-warning">
+    <h2><%= model.errors.count %> error prohibited this book from being saved:　</h2>
     <ul>
       <% model.errors.full_messages.each do |message| %>
         <li><%= message %></li>
