[3-25] topレイアウト途中

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,50 +2,81 @@
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" rel="stylesheet">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-    <h4>Bookers</h4>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to "Home", user_path(current_user) %>
-      </li>
-      <li>
-        <%= link_to "Users", users_path %>
-      </li>
-      <li>
-        <%= link_to "Books", books_path %>
-      </li>
-      <li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "Home", root_path %>
-      </li>
-      <li>
-        <%= link_to "About", homes_about_path %>
-      </li>
-      <li>
-        <%= link_to "Sign up", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "Log in", new_user_session_path %>
-      </li>
-    <% end %>
-  </header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand">
+            <span>Bookers</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+
+              <% if user_signed_in? %>
+                <li>
+                  <%= link_to "Home", user_path(current_user), class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "Users", users_path, class: 'nav-link text-light'%>
+                </li>
+                <li>
+                  <%= link_to "Books", books_path, class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to "Home", root_path, class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "About", homes_about_path, class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "Log in", new_user_session_path, class: 'nav-link text-light' %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main class="mb-auto">
   　<!--<% flash.each do |key, value| %>-->
     　<!--<%= content_tag(:div, value, class: "#{key}") %>-->
 　　<!--<% end %>-->
   　<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+    </main>
+
+    <footer>
+      <div class="container mt-5">
+        <div clsss="row">
+          <div class="mx-auto">
+            <P>CopyRight Infratop.inc</P>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
