--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,23 @@
-<h1>welcome to Bookers !!</h1>
+<h1>
+  welcome to
+  <i class="fa-solid fa-book"></i>
+  <strong>Bookers</strong>
+  !!
+</h1>
+  <p>
+    In
+    <i class="fa-solid fa-book"></i>
+    <strong>Bookers</strong>
+    ,
+  </p>
+  <p>you can share and exchange your opinions , inpressions , and emotions</p>
+  <p>about various books!</p>
+
   <div>
     <%= link_to "Sign up", new_user_registration_path %>
   </div>
   <div>
     <%= link_to "Log in", new_user_session_path %>
   </div>
+  
+  
