[3-25] topレイアウト作成中

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,29 +29,53 @@
 
               <% if user_signed_in? %>
                 <li>
-                  <%= link_to "Home", user_path(current_user), class: 'nav-link text-light' %>
+                  <%= link_to user_path(current_user), class: 'nav-link text-light' do %>
+                  <i class="fa-solid fa-house"></i>
+                  Home
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Users", users_path, class: 'nav-link text-light'%>
+                  <%= link_to users_path, class: 'nav-link text-light' do %>
+                  <i class="fa-solid fa-users"></i>
+                  Users
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Books", books_path, class: 'nav-link text-light' %>
+                  <%= link_to books_path, class: 'nav-link text-light' do %>
+                  <i class="fa-solid fa-book-open"></i>
+                  Books
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
+                  <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
+                  <i class="fa-solid fa-right-from-bracket"></i>
+                  Log out
+                  <% end %>
                 </li>
               <% else %>
                 <li>
-                  <%= link_to "Home", root_path, class: 'nav-link text-light' %>
+                  <%= link_to root_path, class: 'nav-link text-light' do %>
+                  <i class="fa-solid fa-house"></i>
+                  Home
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "About", homes_about_path, class: 'nav-link text-light' %>
+                  <%= link_to homes_about_path, class: 'nav-link text-light' do %>
+                  <i class="fa-solid fa-link"></i>
+                  About
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-light' %>
+                  <%= link_to new_user_registration_path, class: 'nav-link text-light' do %>
+                  <i class="fa-solid fa-user-plus"></i>
+                  Sign up
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Log in", new_user_session_path, class: 'nav-link text-light' %>
+                  <%= link_to new_user_session_path, class: 'nav-link text-light' do %>
+                  <i class="fa-solid fa-right-from-bracket"></i>
+                  Log out
+                  <% end %>
                 </li>
               <% end %>
             </ul>
@@ -68,15 +92,5 @@
     <p class="alert"><%= alert %></p>
     <%= yield %>
     </main>
-
-    <footer>
-      <div class="container mt-5">
-        <div clsss="row">
-          <div class="mx-auto">
-            <P>CopyRight Infratop.inc</P>
-          </div>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
