[3-25] topレイアウト完了

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -25,13 +25,15 @@
           </div>
         </div>
 
-        <div class="container mt-5">
-          <div clsss="row">
-            <div class="mx-auto">
-              <P>CopyRight Infratop.inc</P>
-            </div>
-          </div>
-        </div>
+        <!--<footer>-->
+        <!--  <div class="container mt-5">-->
+        <!--    <div clsss="row">-->
+        <!--      <div class="mx-auto">-->
+        <!--        <P>CopyRight Infratop.inc</P>-->
+        <!--      </div>-->
+        <!--    </div>-->
+        <!--  </div>-->
+        <!--</footer>-->
       </div>
     </div>
   </div>
