[3-25] 各ページレイアウト完了

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -11,32 +11,33 @@
   </div>
   <% end %>
 
-<h1>Editing Book</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
 
-<%= form_with model: @book do |f| %>
+        <h1>Editing Book</h1>
+        <%= form_with model: @book do |f| %>
 
-  <div class="field">
+        <div class="form_group">
+          <div><%= f.label :Title %></div>
+          <div><%= f.text_field :title %></div>
+        </div>
 
-  <div><%= f.label :Title %></div>
-  <div><%= f.text_field :title %></div>
+        <div class="form_group">
+          <div><%= f.label :Opinion %></div>
+          <div><%= f.text_area :body %></div>
+        </div>
 
+        <div class="from_group">
+          <div><%= f.submit 'Update Book', class: "btn btn-success" %></div>
+        </div>
+        <% end %>
+
+        <%= link_to "Show", book_path(@book) %>
+         |
+        <%= link_to "Back", books_path %>
+
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-
-  <div><%= f.label :Opinion %></div>
-  <div><%= f.text_area :body %></div>
-
-  </div>
-
-  <div class="actions">
-
-   <%= f.submit 'Update Book' %>
-
-  </div>
-<% end %>
-
-<%= link_to "Show", book_path(@book) %>
-<%= link_to "Back", books_path %>
-
 </body>
