--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,49 +1,73 @@
-<!--<h1>User info</h1>-->
-<!--  <%= image_tag @user.get_profile_image(100,100) %>-->
-<!--   <div>-->
-<!--   <h4>name</h4>-->
-<!--   <%= @user.name %>-->
-<!--   </div>-->
-<!--   <div>-->
-<!--   <h4>introduction</h4>-->
-<!--   <%= @user.introduction %>-->
-<!--   </div>-->
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
 
-<!--  <% if @user == current_user %>-->
-<!--  <%= link_to "プロフィール編集", edit_user_path(@user) %>-->
-<!--  <% end %>-->
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class="table">
+       <tbody>
+        <tr>
+         <th>name</th>
+         <th><%= @user.name %></th>
+        </tr>
+        <tr>
+         <th>introduction</th>
+         <th><%= @user.introduction %></th>
+        </tr>
+       </tbody>
+      </table>
 
-<!--  <h1>New book</h1>-->
-<!--   <%= form_with model: @book do |f| %>-->
-<!--    <div class="field">-->
-<!--      <div><%= f.label :title %></div>-->
-<!--      <div><%= f.text_field :title %></div>-->
-<!--    </div>-->
+      <div class="row">
+       <% if @user == current_user %>
+       <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
+       <i class="fa-solid fa-user-gear"></i><% end %>
+       <% end %>
+      </div>
 
-<!--    <div class="field">-->
-<!--      <div><%= f.label :body %></div>-->
-<!--      <div><%= f.text_area :body %></div>-->
-<!--    </div>-->
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+         <div class="from_group">
+           <div><%= f.label :Title %></div>
+           <div><%= f.text_field :title %></div>
+         </div>
 
-<!--    <div class="action">-->
-<!--    <%= f.submit 'Create Book' %>-->
-<!--    </div>-->
-<!--   <% end %>-->
+         <div class="from_group">
+           <div><%= f.label :Opinion %></div>
+           <div><%= f.text_area :body %></div>
+         </div>
 
-<!--ユーザー編集、book新規投稿-->
-<%= render 'books/list', user: @user, book: @book %>
+         <div class="from_group">
+         <%= f.submit 'Create Book', class: "btn btn-success" %>
+         </div>
+      <% end %>
+    </div>
 
 <!-- ユーザーの詳細 -->
-<div>
-  <h1>Users</h1>
-  <div>
-    <h4>image</h4>
-    <%= image_tag @user.get_profile_image(100,100) %>
-  </div>
-  <div>
-    <h4>name</h4>
-    <%= @user.name %>
+    <div class="col-md-8 offset-md-1">
+    <h1>Users</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <%= image_tag @user.get_profile_image(100,100) %>
+            </td>
+            <td>
+              <%= @user.name %>
+            </td>
+            <td>
+              <%= link_to "Show", user_path(@user) %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
   </div>
 </div>
-
-<p><%= link_to "Show", user_path(@user) %></p>
