--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,33 +1,45 @@
-<h1>User info</h1>
-  <%= image_tag @user.get_profile_image(100,100) %>
-   <div>
-   <h4>name</h4>
-   <%= @user.name %>
-   </div>
-   <div>
-   <h4>introduction</h4>
-   <%= @user.introduction %>
-   </div>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
 
-  <% if @user == current_user %>
-  <%= link_to "プロフィール編集", edit_user_path(@user) %>
-  <% end %>
-  <!--@user→user-->
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class="table">
+       <tbody>
+        <tr>
+         <th>name</th>
+         <th><%= @user.name %></th>
+        </tr>
+        <tr>
+         <th>introduction</th>
+         <th><%= @user.introduction %></th>
+        </tr>
+       </tbody>
+      </table>
 
- <h1>New book</h1>
-   <%= form_with model: @book do |f| %>
-    <div class="field">
-      <div><%= f.label :title %></div>
-      <div><%= f.text_field :title %></div>
+      <div class="row">
+       <% if @user == current_user %>
+       <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
+       <i class="fa-solid fa-user-gear"></i><% end %>
+       <% end %>
+      </div>
+
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+         <div class="from_group">
+           <div><%= f.label :Title %></div>
+           <div><%= f.text_field :title %></div>
+         </div>
+
+         <div class="from_group">
+           <div><%= f.label :Opinion %></div>
+           <div><%= f.text_area :body %></div>
+         </div>
+
+         <div class="from_group">
+         <%= f.submit 'Create Book', class: "btn btn-success" %>
+         </div>
+      <% end %>
     </div>
-
-    <div class="field">
-      <div><%= f.label :body %></div>
-      <div><%= f.text_area :body %></div>
-    </div>
-
-    <div class="action">
-    <%= f.submit 'Create Book' %>
-    </div>
-   <% end %>
-   <!--@book→book-->
+  </div>
+ </div>
