--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<body>
+
  <% if @book.errors.any? %>
 　<div id="error_explanation">
 　  <h2><%= @book.errors.count %> error prohibited this book from being saved:　</h2>
@@ -10,54 +10,82 @@
   </div>
  <% end %>
 
- <h1>User info</h1>
-  <%= image_tag @user.get_profile_image(100,100) %>
-   <div>
-   <h4>name</h4>
-   <%= @user.name %>
-   </div>
-   <div>
-   <h4>introduction</h4>
-   <%= @user.introduction %>
-   </div>
+  <div class="container px-5 px-sm-0">
+   <div class="row">
+    <div class="col-md-3">
 
-  <% if @user == current_user %>
-  <%= link_to "プロフィール編集", edit_user_path(@user) %>
-  <% end %>
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class="table">
+       <tbody>
+        <tr>
+         <th>name</th>
+         <th><%= @user.name %></th>
+        </tr>
+        <tr>
+         <th>introduction</th>
+         <th><%= @user.introduction %></th>
+        </tr>
+       </tbody>
+      </table>
 
- <h1>New book</h1>
-   <%= form_with model: @book do |f| %>
-    <div class="field">
-      <div><%= f.label :title %></div>
-      <div><%= f.text_field :title %></div>
+      <div class="row">
+       <% if @user == current_user %>
+       <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
+       <i class="fa-solid fa-user-gear"></i><% end %>
+       <% end %>
+      </div>
+
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+         <div class="from_group">
+           <div><%= f.label :Title %></div>
+           <div><%= f.text_field :title %></div>
+         </div>
+
+         <div class="from_group">
+           <div><%= f.label :Opinion %></div>
+           <div><%= f.text_area :body %></div>
+         </div>
+
+         <div class="from_group">
+         <%= f.submit 'Create Book', class: "btn btn-success" %>
+         </div>
+      <% end %>
     </div>
 
-    <div class="field">
-      <div><%= f.label :body %></div>
-      <div><%= f.text_area :body %></div>
+    <div class="col-md-8 offset-md-1">
+     <h2>Books</h2>
+     <table class="table table-hover table-inverse">
+      <thead>
+       <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+        <th colspan="3"></th>
+       </tr>
+      </thead>
+      <tbody>
+       <tr>
+        <td>
+          <% @books.each do |book| %>
+        <!--<h1>Books</h1>-->
+        </td>
+        <td>
+          <%= image_tag book.get_image %>
+          <!--<h4>Title</h4>-->
+        </td>
+        <td>
+          <%= book.title %>
+          <!--<h4>Opinion</h4>-->
+        </td>
+        <td>
+          <%= book.body %>
+        </td>
+       </tr>
+          <% end %>
+      </tbody>
+     </table>
     </div>
-
-    <div class="action">
-    <%= f.submit 'Create Book' %>
-    </div>
-   <% end %>
-
- <h1>Books</h1>
- <h4>Title</h4>
- <h4>Opinion</h4>
- <% @books.each do |book| %>
-  <div>
-   <!--<h1>Books</h1>-->
-   <%= image_tag book.get_image %>
-   <div>
-     <!--<h4>Title</h4>-->
-     <%= book.title %></p>
-   </div>
-   <div>
-     <!--<h4>Opinion</h4>-->
-     <%= book.body %>
    </div>
   </div>
- <% end %>
-
-</body>
