--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,53 +1,71 @@
 <body>
 
- <!--<h1>User info</h1>-->
- <!-- <%= image_tag @user.get_profile_image(100,100) %>-->
- <!--  <div>-->
- <!--  <h4>name</h4>-->
- <!--  <%= @user.name %>-->
- <!--  </div>-->
- <!--  <div>-->
- <!--  <h4>introduction</h4>-->
- <!--  <%= @user.introduction %>-->
- <!--  </div>-->
+ <div class="container px-5 px-sm-0">
+   <div class="row">
+    <div class="col-md-3">
 
- <!-- <% if @user == current_user %>-->
- <!-- <%= link_to "プロフィール編集", edit_user_path(@user) %>-->
- <!-- <% end %>-->
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class="table">
+       <tbody>
+        <tr>
+         <th>name</th>
+         <th><%= @user.name %></th>
+        </tr>
+        <tr>
+         <th>introduction</th>
+         <th><%= @user.introduction %></th>
+        </tr>
+       </tbody>
+      </table>
 
- <!--<h1>New book</h1>-->
- <!--  <%= form_with model: @book_new do |f| %>-->
- <!--   <div class="field">-->
- <!--     <div><%= f.label :title %></div>-->
- <!--     <div><%= f.text_field :title %></div>-->
- <!--   </div>-->
+      <div class="row">
+       <% if @user == current_user %>
+       <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
+       <i class="fa-solid fa-user-gear"></i><% end %>
+       <% end %>
+      </div>
 
- <!--   <div class="field">-->
- <!--     <div><%= f.label :body %></div>-->
- <!--     <div><%= f.text_area :body %></div>-->
- <!--   </div>-->
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+         <div class="from_group">
+           <div><%= f.label :Title %></div>
+           <div><%= f.text_field :title %></div>
+         </div>
 
- <!--   <div class="action">-->
- <!--   <%= f.submit 'Create Book' %>-->
- <!--   </div>-->
- <!--  <% end %>-->
+         <div class="from_group">
+           <div><%= f.label :Opinion %></div>
+           <div><%= f.text_area :body %></div>
+         </div>
+
+         <div class="from_group">
+         <%= f.submit 'Create Book', class: "btn btn-success" %>
+         </div>
+      <% end %>
+    </div>
 
  <!--ユーザー編集、book新規投稿-->
- <%= render 'list', user: @user, book: @book %>
+ <!--<%= render 'list', user: @user, book: @book %>-->
 
- <div>
-   <h1>Book detail</h1>
+    <div class="col-md-8 offset-md-1">
+    <h2>Book detail</h2>
+    <table class="table">
+      <tbody>
+        <tr>
+          <td><%= image_tag @book.get_image %></td>
 
-   <%= image_tag @book.get_image %>
+          <td><%= @book.title %></td>
 
-   <p><%= @book.title %></p>
+          <td><%= @book.body %></td>
 
-   <p><%= @book.body %></p>
-
-   <% if @book.user == current_user %>
-  　 <%= link_to "Edit", edit_book_path %>
-    <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"} %>
-   <% end %>
+          <% if @book.user == current_user %>
+　        <td><%= link_to "Edit", edit_book_path, class: "btn btn-success" %></td>
+          <td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-danger" %></td>
+          <% end %>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+  </div>
  </div>
-
 </body>
