--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,11 @@
-<h1>Welcome to Bookers!</h1>
+<div class="container">
+  <div class="row">
+    <h1 class="px-3 mx-auto">
+    Welcome to
+    <i class="fa-solid fa-book"></i>
+    <strong>Bookers</strong>
+    !
+    </h1>
+    </div>
+  </div>
+</div>
