--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,35 @@
-<h1>User info</h1>
-
-<%= form_with model: @user do |form| %>
-  <div>
-    <h4>Name</h4>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <h4>Introduction</h4>
-    <%= form.text_field :introduction %>
-  </div>
-
-  <div><%= form.submit "Update User" %></div>
+<% if @user.errors.any? %>
+  <%= @user.errors.count %> error prohibited this book from being saved:
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
 <% end %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
+    <h2>User info</h2>
+    <%= form_with model: @user do |form| %>
+    <div class="from_group">
+      <div><%= form.label :Name %></div>
+      <div><%= form.text_field :name %></div>
+    </div>
+
+    <div class="from_group">
+      <div><%= form.label :Image %></div>
+      <div><%= form.file_field :profile_image, accept: "image/*" %></div>
+    </div>
+
+    <div class="from_group">
+      <div><%= form.label :Introduction %></div>
+      <div><%= form.text_field :introduction %></div>
+    </div>
+
+    <div><%= form.submit "Update User", class: "btn btn-secondary" %></div>
+    <% end %>
+
+    </div>
+  </div>
+</div>
