--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,58 +1,84 @@
 <body>
 
- <!-- エラーメッセージ -->
- <%= render 'layouts/error_messages', model: @user %>
+  <div class="container px-5 px-sm-0">
+   <div class="row">
+    <div class="col-md-3">
 
- <!--<h1>User info</h1>-->
- <!-- <%= image_tag @user.get_profile_image(100,100) %>-->
- <!--  <div>-->
- <!--  <h4>name</h4>-->
- <!--  <%= @user.name %>-->
- <!--  </div>-->
- <!--  <div>-->
- <!--  <h4>introduction</h4>-->
- <!--  <%= @user.introduction %>-->
- <!--  </div>-->
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class="table">
+       <tbody>
+        <tr>
+         <th>name</th>
+         <th><%= @user.name %></th>
+        </tr>
+        <tr>
+         <th>introduction</th>
+         <th><%= @user.introduction %></th>
+        </tr>
+       </tbody>
+      </table>
 
- <!-- <% if @user == current_user %>-->
- <!-- <%= link_to "プロフィール編集", edit_user_path(@user) %>-->
- <!-- <% end %>-->
+      <div class="row">
+       <% if @user == current_user %>
+       <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
+       <i class="fa-solid fa-user-gear"></i><% end %>
+       <% end %>
+      </div>
 
- <!-- <h1>New book</h1>-->
- <!--  <%= form_with model: @book do |f| %>-->
- <!--   <div class="field">-->
- <!--     <div><%= f.label :title %></div>-->
- <!--     <div><%= f.text_field :title %></div>-->
- <!--   </div>-->
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+         <div class="from_group">
+           <div><%= f.label :Title %></div>
+           <div><%= f.text_field :title %></div>
+         </div>
 
- <!--   <div class="field">-->
- <!--     <div><%= f.label :body %></div>-->
- <!--     <div><%= f.text_area :body %></div>-->
- <!--   </div>-->
+         <div class="from_group">
+           <div><%= f.label :Opinion %></div>
+           <div><%= f.text_area :body %></div>
+         </div>
 
- <!--   <div class="action">-->
- <!--   <%= f.submit 'Create Book' %>-->
- <!--   </div>-->
- <!--  <% end %>-->
+         <div class="from_group">
+         <%= f.submit 'Create Book', class: "btn btn-success" %>
+         </div>
+      <% end %>
+    </div>
 
  <!--ユーザー編集、book新規投稿-->
- <%= render 'books/list', user: @user, book: @book %>
+ <!--<%= render 'books/list', user: @user, book: @book %>-->
 
-  <h1>Books</h1>
-  <h4>Title</h4>
-  <h4>Opinion</h4>
-  <% @books.each do |book| %>
-  <div>
-    <%= image_tag book.get_image %>
-    <div>
-      <!--<h4>Title</h4>-->
-      <%= book.title %></p>
-    </div>
-    <div>
-      <!--<h4>Opinion</h4>-->
-      <%= book.body %>
-    </div>
-  </div>
-  <% end %>
+ <div class="col-md-8 offset-md-1">
+   <h2>Books</h2>
+   <table class="table table-hover table-inverse">
+      <thead>
+       <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+        <th colspan="3"></th>
+       </tr>
+      </thead>
+      <tbody>
+       <tr>
+        <td>
+          <% @books.each do |book| %>
+        <!--<h1>Books</h1>-->
+        </td>
+        <td>
+          <%= image_tag book.get_image %>
+          <!--<h4>Title</h4>-->
+        </td>
+        <td>
+          <%= book.title %>
+          <!--<h4>Opinion</h4>-->
+        </td>
+        <td>
+          <%= book.body %>
+        </td>
+       </tr>
+          <% end %>
+      </tbody>
+   </table>
+ </div>
 
 </body>
