--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,11 @@
     <div class="col-md-3">
 
       <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100,100) %>
+      <thead>
+       <tr>
+        <%= image_tag @user.get_profile_image(100, 100) %>
+       </tr>
+      </thead>
       <table class="table">
        <tbody>
         <tr>
@@ -32,7 +36,7 @@
       <div class="row">
        <% if @user == current_user %>
        <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
-       <i class="fa-solid fa-user-gear"></i><% end %>
+       <i class="fas fa-user-cog"></i><% end %>
        <% end %>
       </div>
 
@@ -66,24 +70,17 @@
        </tr>
       </thead>
       <tbody>
+       <% @books.each do |book| %>
        <tr>
         <td>
-          <% @books.each do |book| %>
-        <!--<h1>Books</h1>-->
-        </td>
-        <td>
-          <%= image_tag book.get_image %>
-          <!--<h4>Title</h4>-->
-        </td>
-        <td>
-          <%= book.title %>
-          <!--<h4>Opinion</h4>-->
-        </td>
-        <td>
-          <%= book.body %>
-        </td>
-       </tr>
+          <%= link_to user_path(book.user) do %>
+           <%= image_tag @user.get_profile_image(100, 100) %>
           <% end %>
+        </td>
+        <td><%= link_to book.title, book_path(book.id) %></td>
+        <td><%= book.body %></td>
+       </tr>
+       <% end %>
       </tbody>
      </table>
     </div>
