--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,11 @@
     <div class="col-md-3">
 
       <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100,100) %>
+      <thead>
+       <tr>
+        <%= image_tag @user.get_profile_image(100, 100) %>
+       </tr>
+      </thead>
       <table class="table">
        <tbody>
         <tr>
@@ -20,14 +24,13 @@
       </table>
 
       <div class="row">
-       <% if @user == current_user %>
        <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
-       <i class="fa-solid fa-user-gear"></i><% end %>
+       <i class="fas fa-user-cog"></i>
        <% end %>
       </div>
 
       <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
+      <%= form_with model: @book_new do |f| %>
          <div class="from_group">
            <div><%= f.label :Title %></div>
            <div><%= f.text_field :title %></div>
@@ -52,14 +55,15 @@
     <table class="table">
       <tbody>
         <tr>
-          <td><%= image_tag @book.get_image %></td>
-
-          <td><%= @book.title %></td>
-
+          <td>
+           <%= image_tag @user.get_profile_image(100, 100) %>
+           <%= link_to @user.name, user_path(@user) %>
+          </td>
+          <td><%= link_to @book.title, book_path %></td>
           <td><%= @book.body %></td>
 
-          <% if @book.user == current_user %>
-　        <td><%= link_to "Edit", edit_book_path, class: "btn btn-success" %></td>
+          <% if @book.user_id == current_user.id %>
+　        <td><%= link_to "Edit", edit_book_path(@book), class: "btn btn-success" %></td>
           <td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-danger" %></td>
           <% end %>
         </tr>
