--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,13 +3,13 @@
     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
       <h1>
         welcome to
-        <i class="fa-solid fa-book"></i>
+        <i class="fas fa-book"></i>
         <strong>Bookers</strong>
         !!
       </h1>
         <p>
           In
-          <i class="fa-solid fa-book"></i>
+          <i class="fas fa-book"></i>
           <strong>Bookers</strong>
           ,
         </p>
@@ -25,15 +25,6 @@
           </div>
         </div>
 
-        <!--<footer>-->
-        <!--  <div class="container mt-5">-->
-        <!--    <div clsss="row">-->
-        <!--      <div class="mx-auto">-->
-        <!--        <P>CopyRight Infratop.inc</P>-->
-        <!--      </div>-->
-        <!--    </div>-->
-        <!--  </div>-->
-        <!--</footer>-->
       </div>
     </div>
   </div>
