--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,12 +20,12 @@
       <div class="row">
        <% if @user == current_user %>
        <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
-       <i class="fa-solid fa-user-gear"></i><% end %>
+       <i class="fas fa-user-cog"></i><% end %>
        <% end %>
       </div>
 
       <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
+      <%= form_with model: @book_new do |f| %>
          <div class="from_group">
            <div><%= f.label :Title %></div>
            <div><%= f.text_field :title %></div>
@@ -42,7 +42,6 @@
       <% end %>
     </div>
 
-<!-- ユーザーの詳細 -->
     <div class="col-md-8 offset-md-1">
     <h1>Users</h1>
       <table class="table">
@@ -54,17 +53,13 @@
           </tr>
         </thead>
         <tbody>
+          <% @users.each do |user| %>
           <tr>
-            <td>
-              <%= image_tag @user.get_profile_image(100,100) %>
-            </td>
-            <td>
-              <%= @user.name %>
-            </td>
-            <td>
-              <%= link_to "Show", user_path(@user) %>
-            </td>
+            <td><%= image_tag @user.get_profile_image(100, 100) %></td>
+            <td><%= user.name %></td>
+            <td><%= link_to "Show", user_path(user.id) %></td>
           </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
